# RESTURANT-CLI

./: .replit  README.md  config.py  database.py  main.py  models.py  pasted_text_1726551273493.txt  pyproject.toml  restaurant.db  utils.py
commands/: __init__.py  customer.py  menu.py  order.py
